# rsomics-pwmantel

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  dm.rs  lib.rs  mantel.rs  rng.rs
tests/: compat.rs  validation.rs
tests/golden/: dm1.tsv  dm2.tsv  dm3.tsv  golden.tsv
