[package]
name = "rsomics-pwmantel"
version = "0.1.1"
description = "Pairwise Mantel test across N distance matrices (Pearson/Spearman + permutation p), scikit-bio pwmantel compatible"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-pwmantel"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-pwmantel"
path = "src/main.rs"

[lib]
name = "rsomics_pwmantel"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
